# rdkit-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
rdkit-sys/: Cargo.toml  build.rs
rdkit-sys/src/: lib.rs  wrapper.cpp  wrapper.h
src/: fingerprint.rs  lib.rs  molecule.rs  query.rs
